# python-project-50

./: .gitignore  README.md  README.md.save  jsin  json  jsongendiff  jsongendiff1  pyproject.toml
.github/workflows/: main.yml
gendiff/: gendiff.py  parsing.py
gendiff/formaters/: formatter.py
gendiff/formatters/: stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: correct_result_tree_json.txt  diff5.txt  file1.yml
