[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "show difference between two data files"
authors = ["SlashDimka <korolkovpro@yandex.ru>"]
readme = "README.md"
packages = [
{include = "gendiff"},
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

